syntax = "proto3";
package rep.framework.event.v1;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "proto/types/commonpb/v3/common.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info : {
    title : "AuditLog Service"
    version : "2.0"
    contact : {name : "Rafay Dev"}
  }
  schemes : HTTPS
  consumes : "application/json"
  consumes : "application/yaml"
  produces : "application/json"
  produces : "application/yaml"
  security_definitions : {
    security : {
      key : "BasicAuth"
      value : {type : TYPE_BASIC}
    }
    security : {
      key : "ApiKeyAuth"
      value : {type : TYPE_API_KEY in : IN_HEADER name : "X-RAFAY-API-KEYID"}
    }
  }
  security : {
    security_requirement : {
      key : "BasicAuth"
      value : {}
    }
    security_requirement : {
      key : "ApiKeyAuth"
      value : {}
    }
  }
  responses : {
    key : "403"
    value : {
      description : "Returned when the user does not have permission to access "
                    "the resource."
    }
  }
  responses : {
    key : "404"
    value : {
      description : "Returned when the resource does not exist."
      schema : {json_schema : {type : STRING}}
    }
  }
};

message auditLogQueryFilter {
  string type = 1;
  string user = 2;
  string client = 3;
  string timefrom = 4;
  string portal = 5;
  string cluster = 6;
  string namespace = 7;
  string kind = 8;
  string method = 9;
  repeated string projects = 10;
  string queryString = 11;
  bool dashboardData = 12;
}

message auditLogSearchRequest {
  rafay.dev.types.common.v3.Metadata metadata = 1;
  auditLogQueryFilter filter = 2;
}

message auditLogSearchResponse {
  google.protobuf.Struct result = 1;
}

service AuditLog {
  rpc getAuditLog(auditLogSearchRequest) returns (auditLogSearchResponse) {
    option (google.api.http) = {
      get : "/event/v1/{metadata.urlScope=project/*}/auditlog"
    };
  };

  rpc getAuditLogByProjects(auditLogSearchRequest)
      returns (auditLogSearchResponse) {
    option (google.api.http) = {
      get : "/event/v1/auditlog"
    };
  };
}
